# InputSync

./: .gitignore  Justfile  README.md  README_CN.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scenes/: real-time-sync.json  send-message.json
src-tauri/src/: config.rs  keyboard.rs  lib.rs  main.rs  mobile.html  network.rs  qrcode_gen.rs  scene.rs  server.rs
