[package]
name = "talk-type"
version = "1.7.0"
edition = "2021"

[lib]
name = "talk_type_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "talk-type"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
enigo = "0.6"
qrcode = "0.14"
image = "0.25"
local-ip-address = "0.6"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1"
parking_lot = "0.12"
futures-util = "0.3"
arboard = "3"
rfd = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
